kubernetes/apps/home-automation/home-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-automation
spec:
  parentRefs:
    - name: cilium-ingressgateway
      namespace: ingress
  hostnames: ["hass.${DOMAIN}"]
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
          weight: 1
